@@ -169,6 +169,7 @@ v1.2.0  --> 1.2.x :
 		- Fixed copy/paste typo in PreTime.tcl (Thanks to tr1t1um for noticing)
 		- Fixed few inconsistencies in d3x0c.zst (Thanks to tr1t1um for noticing)
 		- Fixed linkererrors regarding FLAC libs
+		- Fixed bug whith sample_list in group_dirs and nocheck_dirs (Thanks to Auri for noticing)
 
 v1.1.0a --> 1.2.0 :
 		- added option to make accept_script run prior to complete_script.
